[gd_scene load_steps=53 format=3 uid="uid://bgsoxr6nsjbrr"]

[ext_resource type="Script" path="res://game_scenes/player/scripts/player.gd" id="1_rfq50"]
[ext_resource type="Texture2D" uid="uid://byhevtpoysbgj" path="res://game_scenes/player/sprites/Idle/Atlas-Idle1.png" id="2_bff7h"]
[ext_resource type="Texture2D" uid="uid://uakl1vbo55og" path="res://game_scenes/player/sprites/Idle/Atlas-Idle2.png" id="3_nweed"]
[ext_resource type="Texture2D" uid="uid://d2v3s0xlmdv6w" path="res://game_scenes/player/sprites/Idle/Atlas-Idle3.png" id="4_ks7sb"]
[ext_resource type="Texture2D" uid="uid://dc5juao4lmqxi" path="res://game_scenes/player/sprites/Idle/Atlas-Idle4.png" id="5_ukl4a"]
[ext_resource type="Texture2D" uid="uid://cpaw6dlwpkci3" path="res://game_scenes/player/sprites/Idle/Atlas-Idle5.png" id="6_4f5mc"]
[ext_resource type="Texture2D" uid="uid://j366s8fdsovp" path="res://game_scenes/player/sprites/Idle/Atlas-Idle6.png" id="7_1uopv"]
[ext_resource type="Texture2D" uid="uid://ctr4k0euoqivu" path="res://game_scenes/player/sprites/Idle/Atlas-Idle7.png" id="8_7qtl8"]
[ext_resource type="Texture2D" uid="uid://cbc35rx3kxquk" path="res://game_scenes/player/sprites/Idle/Atlas-Idle8.png" id="9_ik8jt"]
[ext_resource type="Texture2D" uid="uid://cttminl5y4t0x" path="res://game_scenes/player/sprites/Idle/Atlas-Idle9.png" id="10_p8pxf"]
[ext_resource type="Texture2D" uid="uid://onwv3sgbx7nl" path="res://game_scenes/player/sprites/Idle/Atlas-Idle10.png" id="11_jghhu"]
[ext_resource type="Texture2D" uid="uid://bhjc7b1j7kyf6" path="res://game_scenes/player/sprites/Idle/Atlas-Idle11.png" id="12_7ywb2"]
[ext_resource type="Texture2D" uid="uid://c5lu0qmmtvppk" path="res://game_scenes/player/sprites/Idle/Atlas-Idle12.png" id="13_53u76"]
[ext_resource type="Texture2D" uid="uid://dvrcrayjvxltd" path="res://game_scenes/player/sprites/Idle/Atlas-Idle13.png" id="14_yim3i"]
[ext_resource type="Texture2D" uid="uid://nr2565fatmm4" path="res://game_scenes/player/sprites/Run/Atlas-Run1.png" id="15_8oq4t"]
[ext_resource type="Texture2D" uid="uid://dckut58a6u3gq" path="res://game_scenes/player/sprites/Run/Atlas-Run2.png" id="16_lgir3"]
[ext_resource type="Texture2D" uid="uid://74n2o73o0d6m" path="res://game_scenes/player/sprites/Run/Atlas-Run3.png" id="17_lgki3"]
[ext_resource type="Texture2D" uid="uid://g1qkp0g1j2qy" path="res://game_scenes/player/sprites/Run/Atlas-Run4.png" id="18_s8gva"]
[ext_resource type="Texture2D" uid="uid://botiosojn12gm" path="res://game_scenes/player/sprites/Run/Atlas-Run5.png" id="19_1wmlb"]
[ext_resource type="Texture2D" uid="uid://jjhak8w7iwq" path="res://game_scenes/player/sprites/Run/Atlas-Run6.png" id="20_qjule"]
[ext_resource type="Texture2D" uid="uid://hpfo3hqc75ec" path="res://game_scenes/player/sprites/Run/Atlas-Run7.png" id="21_b5c18"]
[ext_resource type="Texture2D" uid="uid://dur22hwdjgjew" path="res://game_scenes/player/sprites/Run/Atlas-Run8.png" id="22_hfyc5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4q5tp"]
atlas = ExtResource("2_bff7h")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x1q2"]
atlas = ExtResource("3_nweed")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r372x"]
atlas = ExtResource("4_ks7sb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcd7n"]
atlas = ExtResource("5_ukl4a")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6fux"]
atlas = ExtResource("6_4f5mc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10ywb"]
atlas = ExtResource("7_1uopv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek1y3"]
atlas = ExtResource("8_7qtl8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgrgx"]
atlas = ExtResource("9_ik8jt")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s54fr"]
atlas = ExtResource("10_p8pxf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp31r"]
atlas = ExtResource("11_jghhu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibn4y"]
atlas = ExtResource("12_7ywb2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf3xl"]
atlas = ExtResource("13_53u76")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjp5m"]
atlas = ExtResource("14_yim3i")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax36w"]
atlas = ExtResource("15_8oq4t")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f177x"]
atlas = ExtResource("16_lgir3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejv0t"]
atlas = ExtResource("17_lgki3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ph5d"]
atlas = ExtResource("18_s8gva")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_40qtj"]
atlas = ExtResource("19_1wmlb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hem8g"]
atlas = ExtResource("20_qjule")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u30eu"]
atlas = ExtResource("21_b5c18")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwtkw"]
atlas = ExtResource("22_hfyc5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_xettt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q5tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x1q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r372x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcd7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6fux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10ywb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek1y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgrgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s54fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp31r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibn4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf3xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjp5m")
}],
"loop": true,
"name": &"Atlas_idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax36w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f177x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejv0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ph5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40qtj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hem8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u30eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwtkw")
}],
"loop": true,
"name": &"Atlas_run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30y0u"]
size = Vector2(15, 63)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ksw4m"]
bg_color = Color(0.624696, 0, 0.167078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x8iou"]
bg_color = Color(0, 0.361545, 0.202743, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hnlc7"]
size = Vector2(77, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1qvv"]
size = Vector2(40, 64)

[sub_resource type="Animation" id="Animation_dnk2n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_b2kt7"]
resource_name = "hurt_animation"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(50, 47.794, 49.265, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_162de"]
_data = {
"RESET": SubResource("Animation_dnk2n"),
"hurt_animation": SubResource("Animation_b2kt7")
}

[node name="player" type="CharacterBody2D"]
collision_mask = 14
script = ExtResource("1_rfq50")

[node name="animation" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_xettt")
animation = &"Atlas_idle"
autoplay = "Atlas_idle"
frame_progress = 0.485127

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 1)
shape = SubResource("RectangleShape2D_30y0u")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -23.0
offset_top = -41.0
offset_right = 23.0
offset_bottom = -35.0
theme_override_styles/background = SubResource("StyleBoxFlat_ksw4m")
theme_override_styles/fill = SubResource("StyleBoxFlat_x8iou")
value = 70.0
show_percentage = false

[node name="SwordSideArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordSideArea"]
position = Vector2(52.5, -11)
shape = SubResource("RectangleShape2D_hnlc7")
disabled = true
debug_color = Color(0.945721, 0.213935, 0.248147, 0.42)

[node name="SwordUpArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordUpArea"]
position = Vector2(0, -62)
shape = SubResource("RectangleShape2D_q1qvv")
disabled = true
debug_color = Color(0.934515, 0.238558, 0.245729, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_162de")
}

[node name="HeartPoint" type="Marker2D" parent="."]
position = Vector2(7, -9)

[connection signal="area_entered" from="SwordSideArea" to="." method="_on_sword_side_area_area_entered"]
[connection signal="body_entered" from="SwordSideArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="SwordUpArea" to="." method="_on_sword_up_area_body_entered"]
